Fix some region spacing

--- a/css/region--before-content.css
+++ b/css/region--before-content.css
@@ -1,6 +1,6 @@
 .region--before-content > .region__content {
   padding: 0 2rem;
-  max-width: 119rem;
+  max-width: 111rem;
   margin: auto;
 }
 
